# project-autofill

./: .gitignore  README.md  background.js  content.js  hello.excalidraw  hello.mjs  index.js  manifest.json  popup.css  popup.html
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
tui-dashboard/: Cargo.toml
tui-dashboard/src/: app.rs  main.rs  stats.rs  storage.rs  ui.rs
